# odoo18-custom-addons

./: README.md
account_invoice_overdue_reminder/: README.rst  __manifest__.py
account_invoice_refund_link/: README.rst  __manifest__.py
account_move_overdue/: __manifest__.py
acs_document_base/: __manifest__.py
acs_documents_preview/: __manifest__.py
acs_whatsapp/: __init__.py  __manifest__.py
acs_whatsapp_meta/: __init__.py  __manifest__.py
advance_cash_flow_statements/: __init__.py  __manifest__.py
agreement/: __manifest__.py
agreement-18.0/: .copier-answers.yml  README.md
agreement_account/: README.rst  __manifest__.py
agreement_rebate/: README.rst  __manifest__.py
agreement_sale/: __manifest__.py
all_in_one_rma/: __manifest__.py
attendance_notifications/: README.md  __manifest__.py
base_accounting_kit/: __manifest__.py
base_user_role/: README.rst  __manifest__.py
codex_erp_crm_custom/: README.md  __manifest__.py
codex_task_approvals/: README.md  __init__.py  __manifest__.py
codex_whatsapp_connector/: REPLY_THREADING_FIX.md  WEBHOOK_SETUP_GUIDE.md  WHATSAPP_TEMPLATE_SETUP_GUIDE.md  __manifest__.py
contract/: README.rst
contract-18.0/: .copier-answers.yml  .pre-commit-config.yaml  README.md
contract-18.0/setup/_metapackage/: pyproject.toml
contract_line_successor/: README.rst  __manifest__.py
contract_termination/: README.rst  __manifest__.py
discuss_message_approver/: README.md  __manifest__.py
dms-18.0/: .copier-answers.yml  .pre-commit-config.yaml  README.md
ent_employee_air_ticket/: README.md  __manifest__.py
(+1761 files in other folders)
